# DCMTKcs

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
dcmjp2kcs/: CMakeLists.txt
dcmjp2kcs/apps/: CMakeLists.txt  dcmcjp2kcs.cc  dcmdjp2kcs.cc
dcmjp2kcs/docs/: dcmcjp2kcs.man  dcmdjp2kcs.man  dcmjp2kcs.dox  readme.txt
dcmjp2kcs/include/: CMakeLists.txt
dcmjp2kcs/include/dcmtk/dcmjp2kcs/: dj2kcodecd.h  dj2kcodece.h  dj2kdecode.h  dj2kdefine.h  dj2kencode.h  dj2kparam.h  dj2krparam.h  dj2kutil.h
dcmjp2kcs/libsrc/: CMakeLists.txt  dj2kcodecd.cc  dj2kcodece.cc  dj2kdecode.cc  dj2kencode.cc  dj2kparam.cc  dj2krparam.cc  dj2kutils.cc
dcmjp2kcs/tests/: CMakeLists.txt  t_codec.cc  tests.cc
